--- a/python/Textmining_NOZ.ipynb
+++ b/python/Textmining_NOZ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "connect('mongodb://server-grapefruit.quving.com:27027/textminer')\n",
     "db_cursor = get_db().noz_en.find()\n",
     "\n",
-    "NUM_DOCUMENTS = 500\n",
+    "NUM_DOCUMENTS = 5000\n",
     "NUM_TOPICS = 20\n",
     "TESTSET_SIZE = 2\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using 239 unique documents out of 505 total retrieved. (505 requested)\n",
-      "237 docs for training and 2 docs for testing.\n"
+      "Using 1427 unique documents out of 2817 total retrieved. (5000 requested)\n",
+      "1425 docs for training and 2 docs for testing.\n"
      ]
     }
    ],
    "source": [
-    "content_dict = get_texts(db_cursor, num_documents=505)\n",
+    "content_dict = get_texts(db_cursor, num_documents=NUM_DOCUMENTS)\n",
     "keys_train = list(content_dict.keys())[:-TESTSET_SIZE]\n",
     "keys_test = list(content_dict.keys())[-TESTSET_SIZE:]\n",
     "print(f\"{len(keys_train)} docs for training and {len(keys_test)} docs for testing.\")"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        " 'mit-dino-und-star-wars-so-argumentiert-ein-us-senator-gegen-klimaschutz']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "237"
+       "1425"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "2"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "set()"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training the LDA model took 19.849446058273315 seconds.\n"
+      "Training the LDA model with 1425 documents took 157.94126677513123 seconds.\n"
      ]
     }
    ],
